# ChainFactory

./: .gitignore  LICENSE  README.md  classify.py  driver.py  email_.py  main.py  mock.py  pyproject.toml  test.yaml  tooluse.py
.chainfactory/cache/: 1954504993141770480  3003671351212336036  5717095443452395802  6848124380138400717  6930145774510175480  8665027305752893099
.github/workflows/: publish.yml  python-package.yml
chainfactory/: __init__.py
chainfactory/chains/: generate_mask_template.fctr  generate_prompt_template.fctr
chainfactory/core/: __init__.py  components.py  factory.py  tools.py  types.py  utils.py
chainfactory/core/engine/: __init__.py  chainfactory_engine.py  chainfactory_engine_config.py
chainfactory/core/parsing/: class_from_dict.py
chainfactory/interfaces/engine/: __init__.py  chainfactory_engine.py  main.py
chainfactory/parsing/: class_from_dict.py  utils.py
chainfactory/types/: components.py  factory.py
chains/: extract_datetimes.yaml  haiku.fctr
examples/: classify.fctr  email.fctr  extract_datetimes.fctr  haiku.fctr  haiku_ext.fctr  haiku_extends.fctr  haiku_generate_review.fctr  haiku_generate_review_parallel.fctr  haiku_generate_review_validate.fctr  haiku_generate_review_validate_haiku.fctr  haiku_purpose.fctr  random_haiku.fctr  tooluse.fctr
src/interfaces/engine/: main.py
src/parsing/: __init__.py  utils.py  yaml_to_factory.py
src/types/: components.py  factory.py
