[tool.poetry]
name = "chainfactory-py"
version = "0.0.6"
description = "LLM Chains as Configuration Without Code"
authors = ["Pankaj Garkoti <garkotipankaj@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "chainfactory"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.7"
pyyaml = "^6.0.1"
langchain-openai = "^0.1.17"
langchain-anthropic = "^0.1.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
